tests/baselines/reference/inferredFunctionReturnTypeIsEmptyType.errors.txt
==== tests/cases/compiler/inferredFunctionReturnTypeIsEmptyType.ts (1 errors) ====
    function foo() {
    ~~~~~~~~~~~~~~~~
        if (true) {
    ~~~~~~~~~~~~~~~
            return 42;
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        else {
    ~~~~~~~~~~
            return "42";
    ~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    };
    ~
!!! error TS2198: Could not find the best common type of types of all return statement expressions.
    